<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherActivity"
    android:orientation="vertical"
    android:background="@drawable/weather2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/background_file"
            android:hint="@string/city"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:padding="15dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:drawableStart="@drawable/location_city"
            android:layout_marginStart="25dp"
            android:id="@+id/editTextCityName"
            android:inputType="textPersonName">

        </EditText>

        <Button
            android:id="@+id/search"
            android:layout_width="40dp"
            android:layout_height="48dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/search"
            tools:ignore="SpeakableTextPresentCheck">

        </Button>
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linear_layout_weather"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_name"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:layout_margin="7dp"
            android:id="@+id/textViewCityWeather"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="3dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_launcher_background"
                android:layout_marginStart="25dp"
                android:scaleType="fitXY"
                android:id="@+id/imageViewWeather"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewTempWeather"
                    android:text="@string/temp"
                    android:textSize="50sp"
                    android:textColor="#FFFFFF"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewWeatherConditionWeather"
                    android:text="@string/condition"
                    android:textSize="30sp"
                    android:textColor="#FFFFFF"
                    android:textAlignment="center"/>

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:textSize="30sp"
            android:textColor="#FFFFFF"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="25dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity"
                    android:textSize="25sp"
                    android:textColor="#000000"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max_temp"
                    android:textSize="25sp"
                    android:textColor="#000000"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min_temp"
                    android:textSize="25sp"
                    android:textColor="#000000"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pressure"
                    android:textSize="25sp"
                    android:textColor="#000000"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind"
                    android:textSize="25sp"
                    android:textColor="#000000"
                    android:layout_marginTop="5dp"/>


            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humid_value"
                    android:textSize="24sp"
                    android:textColor="#FFFFFF"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:id="@+id/humidityWeather"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max_value"
                    android:textSize="24sp"
                    android:textColor="#FFFFFF"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:id="@+id/maxTempWeather"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min_value"
                    android:textSize="24sp"
                    android:textColor="#FFFFFF"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:id="@+id/minTempWeather"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pressure_value"
                    android:textSize="24sp"
                    android:textColor="#FFFFFF"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:id="@+id/pressureWeather"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind_value"
                    android:textSize="24sp"
                    android:textColor="#FFFFFF"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:id="@+id/windWeather"/>

            </LinearLayout>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabWeather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/add"
                tools:ignore="SpeakableTextPresentCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</LinearLayout>